java/java-tests/testData/codeInsight/daemonCodeAnalyzer/unusedImports/InnersOnDemand1.java
import <error descr="Cannot resolve symbol 'OuterClass'">OuterClass</error>.*;

class OuterClass{
  class Inner{}
}

class X{
  Inner inner;
}


